Updated the documentation and homepage, Meet the Team still needs some work. I'm trying to pull in bootstrap containers (one for each person) but it doesn't seem to be working as intended. I'll get back to it later.

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 	<title>Project Number</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico?v=1.4.44">
 <link href="css/base.css?v=1.4.44" rel="stylesheet">
+
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.css" media="all" rel="stylesheet">
-<link href="css/sample.css" media="all" rel="stylesheet">
 <link href="http://yandex.st/highlightjs/8.0/styles/tomorrow.min.css" media="all" rel="stylesheet">
 	<style >pre{
 	background-color: #f5f5f5;
@@ -28,7 +28,11 @@ fieldset pre{
 h3 code{
 	font-size: 17px;
 }</style>
-	<script >/* html5shiv */ (function(){var t='abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup mark meter nav output progress section summary time video'.split(' ');for(var i=t.length;i--;)document.createElement(t[i])})();</script>
+<script>/* html5shiv */ (function(){var t='abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup mark meter nav output progress section summary time video'.split(' ');for(var i=t.length;i--;)document.createElement(t[i])})();</script>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/bootstrap.js"></script>
 </head>
 <body class=" responsive wd-p-Responsive wd-show-sidebar wd-p-ShowSidebar">
 <div class="wd-l-Page pwrapper">
@@ -173,23 +177,38 @@ h3 code{
 				<div class="wd-l-Content isu-content" id="content" role="main">
 					<div class="wd-l-Content-inner">
 						<p>
-							Team contact: <a href= "mailto:abc@example.com">Send Email</a>
+							Team contact: <a href= "mailto:dec1713@iastate.edu">dec1713@iastate.edu</a>
 						</p>
 
 						<h2>Client</h2>
 
+						Professor Geiger
+
 						<h2>Team Members</h2>
-						<p>
-							Team Member Name, Role, Major, Picture, Email, Short bio.
-						</p>
-
-
-
-						<p>
-							Sample image <br>
-							<img src="img/sprite.png" width="250" />
-						</p>
-
+						<div class="container">
+							<div class="row">
+								<div class="col">
+									1 of 3
+								</div>
+								<div class="col">
+									2 of 3
+								</div>
+								<div class="col">
+									3 of 3
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									1 of 3
+								</div>
+								<div class="col">
+									2 of 3
+								</div>
+								<div class="col">
+									3 of 3
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
