--- a/doc.html
+++ b/doc.html
@@ -177,7 +177,15 @@ h3 code{
 	
 						<p>
 							<ul>
-								<li><a href="pdf/WeeklyReport.pdf" target="_blank">Weekly Report 1</a></li>
+								<li><a href="resources/reports/1-31-17.pdf" target="_blank">Weekly Report 1/31/17</a></li>
+								<li><a href="resources/reports/2-07-17.pdf" target="_blank">Weekly Report 2/07/17</a></li>
+								<li><a href="resources/reports/2-14-17.pdf" target="_blank">Weekly Report 2/14/17</a></li>
+								<li><a href="resources/reports/2-21-17.pdf" target="_blank">Weekly Report 2/21/17</a></li>
+								<li><a href="resources/reports/2-28-17.pdf" target="_blank">Weekly Report 2/28/17</a></li>
+								<li><a href="resources/reports/3-07-17.pdf" target="_blank">Weekly Report 3/07/17</a></li>
+								<li><a href="resources/reports/3-14-17.pdf" target="_blank">Weekly Report 3/13/17</a></li>
+								<li><a href="resources/reports/3-21-17.pdf" target="_blank">Weekly Report 3/20/17</a></li>
+
 							</ul>
 						</p>
 
@@ -185,7 +193,7 @@ h3 code{
 	
 						<p>
 							<ul>
-								<li><a href="pdf/ProjectPlanTemplate.pdf" target="_blank">Version 1</a></li>
+								<li><a href="resources/plans/ProjectPlanV1.pdf" target="_blank">Version 1</a></li>
 							</ul>
 						</p>
 
@@ -193,7 +201,27 @@ h3 code{
 	
 						<p>
 							<ul>
-								<li><a href="" target="_blank">Version 1</a></li>
+								<li><a href="resources/plans/DesignDocumentV1.pdf" target="_blank">Version 1</a></li>
+							</ul>
+						</p>
+
+						<h2>Meeting Minutes</h2>
+
+						<p>
+							<ul>
+								<li><a href="resources/minutes/Meeting1-24-2017.pdf" target="_blank">1/24/2017 Initial Meeting</a></li>
+								<li><a href="resources/minutes/2-12-2017IanandCharlieUIMeeting.pdf" target="_blank">2/12/2017 Web Design Groundwork</a></li>
+								<li><a href="resources/minutes/3-2-2017AdvisorMeeting.pdf" target="_blank">3/2/2017 Hydroscopic Sensor Details</a></li>
+								<li><a href="resources/minutes/3-3-2017MeetingwithDr.Kaleita.pdf" target="_blank">3/3/2017 Meeting with Dr. Kaleita</a> </li>
+								<li><a href="resources/minutes/3-9-2017Geiger.pdf" target="_blank">3/9/2017 Meeting with Prof. Geiger</a> </li>
+							</ul>
+						</p>
+
+						<h2>Supplemental Research</h2>
+
+						<p>
+							<ul>
+								<li><a href="resources/research/distance_test_3_17.pdf" target="_blank">Short Range Radio Transmitter Test Data</a></li>
 							</ul>
 						</p>
 
