--- a/index.html
+++ b/index.html
@@ -172,24 +172,20 @@ h3 code{
 
 				<div class="wd-l-Content isu-content" id="content" role="main">
 					<div class="wd-l-Content-inner">
-						<h1>Can Place Project Name/Number Here</h1>
-						<p>Write about your problem statement.</p>
+						<h1>Team 1713</h1>
+						<p>Our project is to make a network of nodes to relay sensor data and relay that data to a webpage for a user to interface with. Each node will collect information on temperature, pressure, soil moisture etc. This information is sent to a  “home” node with 3G cellular enabled, and be able to upload data to an off-site web application. The data can then be interpreted by the user. The field hardware will be designed to last up to 8 months on a battery. The modules will be cheap and biodegradable so that there is no need for collection.  </p>
 
 						<h2>Objectives/Goals</h2>
 
 						<p>
 							List and explain project goals.
 							<ul>
-								<li>Goal 1</li>
-								<li>Goal 2</li>
-								<li>...</li>
+								<li>Create a "Leaf node" that can communicate with other Leaf Nodes</li>
+								<li>Create a "Home Node" that can communicate to a web-application through 3G</li>
+								<li>Create a web application that can store and display information from our nodes</li>
 							</ul>
 						</p>
 
-						<p>
-							Sample image <br>
-							<img src="img/sprite.png" width="250" />
-						</p>
 
 					</div>
 				</div>
