Fixed bootstrap issue, columns now work

--- a/about.html
+++ b/about.html
@@ -187,24 +187,24 @@ h3 code{
 						<h2>Team Members</h2>
 						<div class="container">
 							<div class="row">
-								<div class="col">
-									1 of 3
+								<div class="col-md-4">
+									<h4>Ian Harris</h4>
 								</div>
-								<div class="col">
-									2 of 3
+								<div class="col-md-4">
+                                    <h4>Ian Harris</h4>
 								</div>
-								<div class="col">
+								<div class="col-md-4">
 									3 of 3
 								</div>
 							</div>
 							<div class="row">
-								<div class="col">
+								<div class="col-md-4">
 									1 of 3
 								</div>
-								<div class="col">
+								<div class="col-md-4">
 									2 of 3
 								</div>
-								<div class="col">
+								<div class="col-md-4">
 									3 of 3
 								</div>
 							</div>
