Created gallery page and added it to the navbar Updated our main page to include a better "why you should care about our project" pitch

--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,8 @@
     <title>Project Number</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico?v=1.4.44">
     <link href="css/base.css?v=1.4.44" rel="stylesheet">
-
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.css" media="all" rel="stylesheet">
+    <link href="css/sample.css" media="all" rel="stylesheet">
     <link href="http://yandex.st/highlightjs/8.0/styles/tomorrow.min.css" media="all" rel="stylesheet">
     <style >pre{
         background-color: #f5f5f5;
@@ -28,11 +28,7 @@
     h3 code{
         font-size: 17px;
     }</style>
-    <script>/* html5shiv */ (function(){var t='abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup mark meter nav output progress section summary time video'.split(' ');for(var i=t.length;i--;)document.createElement(t[i])})();</script>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script >/* html5shiv */ (function(){var t='abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup mark meter nav output progress section summary time video'.split(' ');for(var i=t.length;i--;)document.createElement(t[i])})();</script>
 </head>
 <body class=" responsive wd-p-Responsive wd-show-sidebar wd-p-ShowSidebar">
 <div class="wd-l-Page pwrapper">
@@ -155,11 +151,11 @@
                                 <!-- Put necessary tabs here for sidebar menu -->
 
                                 <li class="wd-Navigation-node">
-                                    <a class="wd-Navigation-link" href="index.html">Homepage</a>
+                                    <a class="wd-Navigation-link is-active" href="index.html">Homepage</a>
                                 </li>
 
                                 <li class="wd-Navigation-node">
-                                    <a class="wd-Navigation-link is-active" href="about.html">Meet the Team</a>
+                                    <a class="wd-Navigation-link" href="about.html">Meet the Team</a>
                                 </li>
 
                                 <li class="wd-Navigation-node">
@@ -180,86 +176,9 @@
 
                 <div class="wd-l-Content isu-content" id="content" role="main">
                     <div class="wd-l-Content-inner">
-                        <p>
-                            Team contact: <a href= "mailto:dec1713@iastate.edu">dec1713@iastate.edu</a>
-                        </p>
+                        <h1>Gallery</h1>
+                        <p>Included are some additional pictures. Our gallery shows several stages of our project, mostly the tangible work such as creating and testing our hydroscopic sensor. (WORK IN PROGRESS)</p>
 
-                        <h2>Client</h2>
-
-                        Professor Geiger
-
-                        <h2>Team Members</h2>
-                        <div class="Container-inner">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <h4>Ian Harris</h4>
-                                    <img src="resources/img/IanMugshot.png" alt="Ian" style="width:300px;height:400px;">
-                                    <ul>
-                                        <li>Role: Team Lead, Web App Development</li>
-                                        <li>Major: Software Engineering</li>
-                                        <li>Email: iaharris@iastate.edu</li>
-                                        <li>Bio: <p>A senior in software engineering, I enjoy learning new things and working with people. I’ve worked for ITS at Iowa State for nearly 2 years, working on several different projects. In my free time I enjoy video games and board games with friends.</p></li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-4">
-                                    <h4>Gregory Steenhagen</h4>
-                                    <img src="resources/img/CharlieMugshot.png" alt="Charlie" style="width:300px;height:400px;">
-                                    <ul>
-                                        <li>Role: Webmaster, Web App Development</li>
-                                        <li>Major: Software Engineering</li>
-                                        <li>Email: gcs@iastate.edu</li>
-                                        <li>Bio: <p>I am a senior in software engineering, and I plan to graduate in December of 2017. I currently work for Saltech Systems as an software development intern with a promise of employment after graduation. I enjoy staying active by running, biking, swimming or playing sports, and I also like to spend time with my girlfriend and our puppy.</p></li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-4">
-                                    <h4>Khoi Cao</h4>
-                                    <img src="resources/img/KacaoMugshot.png" alt="Kacao" style="width:300px;height:400px;">
-                                    <ul>
-                                        <li>Role: Home Node Development</li>
-                                        <li>Major: Electrical Engineering</li>
-                                        <li>Email: kacao@iastate.edu</li>
-                                        <li>Bio: <p>Khoi is a senior in computer engineering with emphasis on Embedded System. Born and grown up on a farm in Vietnam, Khoi understands the benefit of precision farming to the agricultural industry. The senior project about IoT system in farming indeed thrilled him by an advanced method to modernizing agriculture landscape and optimizing the yield and resources. He hopes to apply the technology to his family farming business in the near future.
-                                            Khoi also gets actively involved in the after-school activities. He is the president of Vietnamese International Student Association, with the main responsibility for promoting the diversity of international culture and arts at ISU. </p></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <h4>Steven Warren</h4>
-                                    <img src="resources/img/StevenMugshot.png" alt="Stephen" style="width:300px;height:400px;">
-                                    <ul>
-                                        <li>Role: Communication, Leaf Node Development</li>
-                                        <li>Major: Electrical Engineering</li>
-                                        <li>Email: iaharris@iastate.edu</li>
-                                        <li>Bio: <p>Steve is a Senior studying Electrical Engineering at Iowa State. He is the President of Critical Tinkers, a primarily Electrical and Computer Engineering club focused on improving critical thinking skills by creating innovative projects and brainstorming. Steve's responsibilities include organizing and running meetings as well as focusing on the club's values of critical thinking and ingenuity. Steve plays tuba and is an active member of the bands. He is a member of KKΨ, the honorary band service fraternity. </p></li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-4">
-                                    <h4>Terver Ubwa</h4>
-                                    <img src="resources/img/TerverMugshot.png" alt="Terver" style="width:300px;height:400px;">
-                                    <ul>
-                                        <li>Role: Home Node Development</li>
-                                        <li>Major: Electrical Engineering</li>
-                                        <li>Email: ubwa1@iastate.edu</li>
-                                        <li>Bio: <p>I am a senior in Electrical engineering with emphasis in embedded systems and communications. I am especially fascinated by the revolutionary impact of internet of things(IoT). In my spare time, I try to be active by working out. I also love meeting new people,traveling and experiencing different cultures. I love visiting new places with my family and friends. </p></li>
-                                    </ul>
-                                </div>
-                                <div class="col-md-4">
-                                    <h4>Tim Lindquist</h4>
-                                    <img src="resources/img/TimMugshot.png" alt="Tim" style="width:300px;height:400px;">
-                                    <ul>
-                                        <li>Role: Key Idea </li>
-                                        <li>Major: Electrical Engineering</li>
-                                        <li>Email: timothyl@iastate.edu</li>
-                                        <li>Bio: <p> I am a senior  studying electrical engineering at Iowa State University. I participate in a wide variety of activities at college. Within my major, I joined an EE audio club where we built amplifiers, filters and power supplies for our audio networks.
-                                            Another club I joined is Arduino club.
-                                            Intramural sports are some of my favorite activities to do throughout the school year. I’m involved with hockey, soccer, golf, volleyball and broomball teams.
-                                            Outside of that, I like to stay active and healthy by working out at the gym several times a week.
-                                        </p></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
