--- a/index.html
+++ b/index.html
@@ -153,13 +153,17 @@ h3 code{
 								<li class="wd-Navigation-node">
 									<a class="wd-Navigation-link is-active" href="index.html">Homepage</a>
 								</li>
-						
+
 								<li class="wd-Navigation-node">
 									<a class="wd-Navigation-link" href="about.html">Meet the Team</a>
 								</li>
 						
 								<li class="wd-Navigation-node">
 									<a class="wd-Navigation-link" href="doc.html">Documentation</a>
+								</li>
+
+								<li class="wd-Navigation-node">
+									<a class="wd-Navigation-link is-active" href="gallery.html">Gallery</a>
 								</li>
 							</ul>
 						</div>
@@ -173,15 +177,16 @@ h3 code{
 				<div class="wd-l-Content isu-content" id="content" role="main">
 					<div class="wd-l-Content-inner">
 						<h1>Team 1713</h1>
-						<p>Our project is to make a network of nodes to relay sensor data and relay that data to a webpage for a user to interface with. Each node will collect information on temperature, pressure, soil moisture etc. This information is sent to a  “home” node with 3G cellular enabled, and be able to upload data to an off-site web application. The data can then be interpreted by the user. The field hardware will be designed to last up to 8 months on a battery. The modules will be cheap and biodegradable so that there is no need for collection.  </p>
-
+						<p>Our project’s purpose is to help a farmer decide if they should irrigate their field. This relatively simple question is a complex one to answer however. The proposed solution is to use a network of “nodes” that have a hydroscopic sensor attached. We have constructed a prototype hydroscopic sensor that uses a cutting edge biodegradable material. These nodes relay information to a “home” node that can send that data to a web application. From there, a farmer can access it via the internet and see the moisture levels across their field. With this information, the farmer should have the information they need to decide if they should irrigate their field.</p>
+						<br>
 						<h2>Objectives/Goals</h2>
 
 						<p>
-							List and explain project goals.
+							Our Major Milestones:
 							<ul>
-								<li>Create a "Leaf node" that can communicate with other Leaf Nodes</li>
-								<li>Create a "Home Node" that can communicate to a web-application through 3G</li>
+								<li>Create a "leaf node" that can communicate with other Leaf Nodes</li>
+								<li>Create and test a hydroscopic sensor for our leaf nodes.</li>
+								<li>Create a "home node" that can communicate to a web-application through 3G</li>
 								<li>Create a web application that can store and display information from our nodes</li>
 							</ul>
 						</p>
