--- a/doc.html
+++ b/doc.html
@@ -161,6 +161,10 @@ h3 code{
 								<li class="wd-Navigation-node">
 									<a class="wd-Navigation-link is-active" href="doc.html">Documentation</a>
 								</li>
+
+								<li class="wd-Navigation-node">
+									<a class="wd-Navigation-link is-active" href="gallery.html">Gallery</a>
+								</li>
 							</ul>
 						</div>
 		
