Fixed is-active tags

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
                                 </li>
 
                                 <li class="wd-Navigation-node">
-                                    <a class="wd-Navigation-link is-active" href="gallery.html">Gallery</a>
+                                    <a class="wd-Navigation-link" href="gallery.html">Gallery</a>
                                 </li>
                             </ul>
                         </div>
