--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
                                 <!-- Put necessary tabs here for sidebar menu -->
 
                                 <li class="wd-Navigation-node">
-                                    <a class="wd-Navigation-link is-active" href="index.html">Homepage</a>
+                                    <a class="wd-Navigation-link" href="index.html">Homepage</a>
                                 </li>
 
                                 <li class="wd-Navigation-node">
