--- a/doc.html
+++ b/doc.html
@@ -163,7 +163,7 @@ h3 code{
 								</li>
 
 								<li class="wd-Navigation-node">
-									<a class="wd-Navigation-link is-active" href="gallery.html">Gallery</a>
+									<a class="wd-Navigation-link" href="gallery.html">Gallery</a>
 								</li>
 							</ul>
 						</div>
