Cleaned up some spacing and wording.

--- a/gallery.html
+++ b/gallery.html
@@ -177,7 +177,7 @@
                 <div class="wd-l-Content isu-content" id="content" role="main">
                     <div class="wd-l-Content-inner">
                         <h1>Gallery</h1>
-                        <p>Included are some additional pictures. Our gallery shows several stages of our project, mostly the tangible work such as creating and testing our hydroscopic sensor. (WORK IN PROGRESS)</p>
+                        <p>Included are some additional pictures of our process. (WORK IN PROGRESS)</p>
 
                     </div>
                 </div>
