--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ h3 code{
 				<div class="wd-l-Content isu-content" id="content" role="main">
 					<div class="wd-l-Content-inner">
 						<h1>Team 1713</h1>
-						<p>Our project’s purpose is to help a farmer decide if they should irrigate their field. This relatively simple question is a complex one to answer however. The proposed solution is to use a network of “nodes” that have a hydroscopic sensor attached. We have constructed a prototype hydroscopic sensor that uses a cutting edge biodegradable material. These nodes relay information to a “home” node that can send that data to a web application. From there, a farmer can access it via the internet and see the moisture levels across their field. With this information, the farmer should have the information they need to decide if they should irrigate their field.</p>
+						<div style="width: 75%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Our project’s purpose is to help a farmer decide if they should irrigate their field. This relatively simple question is a complex one to answer however. The proposed solution is to use a network of “nodes” that have a hydroscopic sensor attached. We have constructed a prototype hydroscopic sensor that uses a cutting edge biodegradable material. These nodes relay information to a “home” node that can send that data to a web application. From there, a farmer can access it via the internet and see the moisture levels across their field. With this information, the farmer should have the information they need to decide if they should irrigate their field.</div>
 						<br>
 						<h2>Objectives/Goals</h2>
 
