Gallery is lookin good.

--- a/gallery.html
+++ b/gallery.html
@@ -177,8 +177,14 @@
                 <div class="wd-l-Content isu-content" id="content" role="main">
                     <div class="wd-l-Content-inner">
                         <h1>Gallery</h1>
-                        <p>Included are some additional pictures of our process. (WORK IN PROGRESS)</p>
-
+                        <p>Included are some additional pictures of our process.</p>
+                        <h2>Transceiver Testing</h2>
+                        <div><blockquote class="imgur-embed-pub" lang="en" data-id="a/BNAt6"><a href="//imgur.com/BNAt6">Transceiver Testing</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></div>
+                        <h2>Blood Sample Testing</h2>
+                        <p>Stress testing our biodegradable material.</p>
+                        <div><blockquote class="imgur-embed-pub" lang="en" data-id="a/fc7a2"><a href="//imgur.com/fc7a2">Blood Sample Sensor</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></div>
+                        <h2>Hydroscopic sensor</h2>
+                        <div><blockquote class="imgur-embed-pub" lang="en" data-id="a/aNqe8"><a href="//imgur.com/aNqe8">Hydroscopic Sensor</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></div>
                     </div>
                 </div>
             </div>
