- Updated documentation - Made distinction that Geiger is our client and advisor, included his e-mail - Added team e-mail to the footer

--- a/about.html
+++ b/about.html
@@ -180,15 +180,13 @@
 
                 <div class="wd-l-Content isu-content" id="content" role="main">
                     <div class="wd-l-Content-inner">
-                        <p>
-                            Team contact: <a href= "mailto:dec1713@iastate.edu">dec1713@iastate.edu</a>
-                        </p>
+                        <h2>Client and Advisor</h2>
 
-                        <h2>Client</h2>
-
-                        Professor Geiger
+                        <h4>Dr. Randall Geiger (rlgeiger@iastate.edu)</h4>
 
                         <h2>Team Members</h2>
+                        <h4>Team email: <a href= "mailto:dec1713@iastate.edu">dec1713@iastate.edu</a></h4>
+
                         <div class="Container-inner">
                             <div class="row">
                                 <div class="col-md-4">
@@ -285,7 +283,7 @@
 
                             <div class="wd-Grid-cell wd-Grid-cell--2">
                                 <div class="wd-l-PageFooter-content">
-                                    <p>Team Number,  <script>document.write('<a href="mailto:'+ ["teamEmail", "iastate.edu"].join('@') +'">'+ ["teamEmail", "iastate.edu"].join('@') +'</a>')</script><noscript>teamEmail (at) iastate (dot) edu</noscript>.</p>
+                                    <p>Team dec1713,  <script>document.write('<a href="mailto:'+ ["dec1713", "iastate.edu"].join('@') +'">'+ ["dec1713", "iastate.edu"].join('@') +'</a>')</script><noscript>dec1713 (at) iastate (dot) edu</noscript>.</p>
                                     <p>Copyright &copy; 1995-2016, Iowa State University of Science and Technology. All rights reserved.</p>
                                 </div>
                             </div>
