--- a/doc.html
+++ b/doc.html
@@ -187,8 +187,13 @@ h3 code{
 								<li><a href="resources/reports/2-21-17.pdf" target="_blank">Weekly Report 2/21/17</a></li>
 								<li><a href="resources/reports/2-28-17.pdf" target="_blank">Weekly Report 2/28/17</a></li>
 								<li><a href="resources/reports/3-07-17.pdf" target="_blank">Weekly Report 3/07/17</a></li>
-								<li><a href="resources/reports/3-14-17.pdf" target="_blank">Weekly Report 3/13/17</a></li>
-								<li><a href="resources/reports/3-21-17.pdf" target="_blank">Weekly Report 3/20/17</a></li>
+								<li><a href="resources/reports/3-13-17.pdf" target="_blank">Weekly Report 3/13/17</a></li>
+								<li><a href="resources/reports/3-20-17.pdf" target="_blank">Weekly Report 3/20/17</a></li>
+								<li><a href="resources/reports/3-27-17.pdf" target="_blank">Weekly Report 3/27/17</a></li>
+								<li><a href="resources/reports/4-3-17.pdf" target="_blank">Weekly Report 4/03/17</a></li>
+								<li><a href="resources/reports/4-10-17.pdf" target="_blank">Weekly Report 4/10/17</a></li>
+								<li><a href="resources/reports/4-17-17.pdf" target="_blank">Weekly Report 4/17/17</a></li>
+								<li><a href="resources/reports/4-24-17.pdf" target="_blank">Weekly Report 4/24/17</a></li>
 
 							</ul>
 						</p>
@@ -198,6 +203,7 @@ h3 code{
 						<p>
 							<ul>
 								<li><a href="resources/plans/ProjectPlanV1.pdf" target="_blank">Version 1</a></li>
+								<li><a href="resources/plans/ProjectPlanV2.pdf" target="_blank">Version 2</a> (revised 03/31/2017)</li>
 							</ul>
 						</p>
 
@@ -206,6 +212,7 @@ h3 code{
 						<p>
 							<ul>
 								<li><a href="resources/plans/DesignDocumentV1.pdf" target="_blank">Version 1</a></li>
+								<li><a href="resources/plans/DesignDocumentV2.pdf" target="_blank">Version 2</a> (revised 03/07/2017)</li>
 							</ul>
 						</p>
 
@@ -254,7 +261,7 @@ h3 code{
 
 							<div class="wd-Grid-cell wd-Grid-cell--2">
 								<div class="wd-l-PageFooter-content">
-									<p>Team Number,  <script>document.write('<a href="mailto:'+ ["teamEmail", "iastate.edu"].join('@') +'">'+ ["teamEmail", "iastate.edu"].join('@') +'</a>')</script><noscript>teamEmail (at) iastate (dot) edu</noscript>.</p>
+									<p>Team dec1713,  <script>document.write('<a href="mailto:'+ ["dec1713", "iastate.edu"].join('@') +'">'+ ["dec1713", "iastate.edu"].join('@') +'</a>')</script><noscript>dec1713 (at) iastate (dot) edu</noscript>.</p>
 									<p>Copyright &copy; 1995-2016, Iowa State University of Science and Technology. All rights reserved.</p>
 								</div>
 							</div>
