--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ h3 code{
 
 							<div class="wd-Grid-cell wd-Grid-cell--2">
 								<div class="wd-l-PageFooter-content">
-									<p>Team Number,  <script>document.write('<a href="mailto:'+ ["teamEmail", "iastate.edu"].join('@') +'">'+ ["teamEmail", "iastate.edu"].join('@') +'</a>')</script><noscript>teamEmail (at) iastate (dot) edu</noscript>.</p>
+									<p>Team dec1713,  <script>document.write('<a href="mailto:'+ ["dec1713", "iastate.edu"].join('@') +'">'+ ["dec1713", "iastate.edu"].join('@') +'</a>')</script><noscript>dec1713 (at) iastate (dot) edu</noscript>.</p>
 									<p>Copyright &copy; 1995-2016, Iowa State University of Science and Technology. All rights reserved.</p>
 								</div>
 							</div>
